Fri Mar 27 23:21:17 PDT 2009 (hdp) - Release 0.70
  Tests that use JSON were either not checking for the version or checking in a
  way that was a syntax error.

Thu Mar 26 14:16:03 PDT 2009 (hdp) - Release 0.69
  Fix RT#32342, deprecated config loses default map (hdp)
  Fix broken insertion of Catalyst::Request::REST for Action::REST (jshirley)

Wed Mar 25 22:33:38 PDT 2009 (hdp) - Release 0.68
  Remove prompt for ancient and deprecated Data::Denter from Makefile.PL
  Remove Data::Dump, which was entirely unused
  Stop tests from dying with Catalyst 5.80

Wed Mar 25 21:59:59 PDT 2009 (hdp) - Release 0.67
  (no changes from 0.67_01)

Wed Mar 25 09:36:00 PDT 2009 (hdp) - Release 0.67_01
  Fix RT#43840, improper app-level config handling
  Fix RT#42859, 'wrong' Catalyst dependency
  Fix RT#42025, stepping on custom request classes

Wed Aug 20 10:42:00 PST 2008 (jshirley) - Release 0.65
  Fully revamped tests to work without any JSON support
  Final removal of JSON::Syck
  Special thanks to jgoulah for helping test this release

Wed Aug 13 08:55:00 PST 2008 (jshirley) - Release 0.64
  New dist to fix issue with Module::Install

Wed Jul 09 11:16:00 PST 2008 (jshirley) - Release 0.63
  Changing from JSON::Syck to JSON/JSON::XS
  Refactored tests to be more applicable to current state of affairs

Wed Jul 02 07:53:00 PST 2008 (jshirley) - Release 0.62
  Reshipping with current Module::Install included due to error reports
    about failed installs


Mon Jun 30 12:28:00 PST 2008 (jshirley) - Release 0.61
  Support official application/json and carp about text/x-json
  Accepted patch from Luke Saunders for processing all accepted content types

Thu Jan  3 17:23:58 PST 2008 (adam) - Release 0.60
  Updated my contact information.
  Prepped for release.

Thu Jan  3 19:42:16 EST 2008 
	Fixed RT#30498 - REST controller references Catalyst without
	  loading it first.
	Fixed RT#32042 - Import of Params::Validate :all plays badly
	  with subclasses that have their own validate()